--- a/project2/app/templates/app/index.html
+++ b/project2/app/templates/app/index.html
@@ -49,7 +49,7 @@
             <div class="col-sm-3" about="http://www.top-tracks.com/items/{{top_track.id}}">
                 <div class="card">
                     <a href="/music/id={{top_track.id}}">
-                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" about="http://www.top-tracks.com/image/{{top_track.id}}/{{top_track.width}}"
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" rel="spot:image" about="http://www.top-tracks.com/image/{{top_track.id}}/{{top_track.width}}"
                          property="foaf:url" src="{{ top_track.src }}" alt="Card image">
                     </a>
                     <div class="card-body">
