--- a/project2/app/templates/app/account.html
+++ b/project2/app/templates/app/account.html
@@ -6,7 +6,7 @@
     <div class="row" style="margin-top: 30px">
         <div class="col-sm-3 col-md-6 col-lg-4">
             <div class="card" style="width: 20rem;">
-                <img class="card-img-top" src={{ photo }} alt="Card image cap">
+                <img class="card-img-top" src="{{ photo }}" alt="Card image cap"/>
                 <div class="card-block">
                     </br>
                     <center><h5 class="card-title align-content-between"><i class="fa fa-spotify" aria-hidden="true" style="color: #4cae4c"></i> {{ username }} Account </h5></center>
