--- a/project2/app/templates/app/layout.html
+++ b/project2/app/templates/app/layout.html
@@ -13,6 +13,7 @@
     <link rel="icon" type="image/x-icon" href="{% static 'app/images/spotify.ico' %}"/>
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'app/images/spotify.ico' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/font-awesome.css' %}"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
           integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
