--- a/project2/app/templates/app/login.html
+++ b/project2/app/templates/app/login.html
@@ -57,4 +57,5 @@
 {% block scripts %}
     {% load staticfiles %}
         <script src="{% static 'app/scripts/jquery.validate.min.js' %}"></script>
+        <script src="{% static 'app/scripts/comments.js' %}"></script>
 {% endblock %}
