--- a/project2/app/templates/app/music.html
+++ b/project2/app/templates/app/music.html
@@ -72,8 +72,57 @@
                 </div>
             </div>
         </div>
+    </div>
 
+    <div class="panel-group">
+        <div class="col-lg-1">
+            <img style="width: 90px; border: 1px solid #428bca" class="img-responsive img-rounded" src="{{ photo }}"/>
+        </div>
+        <div class="col-lg-12">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                        <strong>{{ user_name }}</strong> <span class="text-muted"></span>
+                        </div>
+                        <div class="panel-body">
+                            <form method="post" >
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <textarea class="form-control" placeholder="Insert your comment." rows="3" name="comment" id="text_to_comment"></textarea>
+                                </div>
+                            </form>
+                            <button style="text-align: right" class="btn btn-primary" id="comment">Comment</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-12" style="margin-top: 10px;"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="panel-group" id="newComment">
+        {% for comment in comments %}
+            <div class="col-lg-1">
+                <img style="width: 90px; border: 1px solid #428bca" class="img-responsive img-rounded" src="http://graph.facebook.com/{{ comment.profile_uid }}/picture?type=large"/>
+            </div>
+            <div class="col-lg-12">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                            <strong>{{ comment.profile_name }}</strong> <span class="text-muted"></span>
+                            </div>
+                            <div class="panel-body">
+                                {{ comment.text }}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12" style="margin-top: 10px;">
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
     </div>
 </div>
-
 {% endblock %}
