--- a/project2/app/templates/app/layout.html
+++ b/project2/app/templates/app/layout.html
@@ -66,6 +66,7 @@
     </footer>
 </div>
 
+<script src="{% static 'app/scripts/comments.js' %}"></script>
 
 {% block scripts %}{% endblock %}
 </body>
