--- a/project2/app/templates/app/music.html
+++ b/project2/app/templates/app/music.html
@@ -91,8 +91,8 @@
                                 <div class="form-group">
                                     <textarea class="form-control" placeholder="Insert your comment." rows="3" name="comment" id="text_to_comment"></textarea>
                                 </div>
+                                <button style="text-align: right" class="btn btn-primary" id="comment">Comment</button>
                             </form>
-                            <button style="text-align: right" class="btn btn-primary" id="comment">Comment</button>
                         </div>
                     </div>
                 </div>
@@ -102,6 +102,7 @@
     </div>
 
     <div class="panel-group" id="newComment">
+    {% csrf_token %}
         {% for comment in comments %}
             <div class="col-lg-1">
                 <img style="width: 90px; border: 1px solid #428bca" class="img-responsive img-rounded" src="http://graph.facebook.com/{{ comment.profile_uid }}/picture?type=large"/>
