--- a/project2/app/templates/app/music.html
+++ b/project2/app/templates/app/music.html
@@ -105,17 +105,17 @@
     {% csrf_token %}
         {% for comment in comments %}
             <div class="col-lg-1">
-                <img style="width: 90px; border: 1px solid #428bca" class="img-responsive img-rounded" src="http://graph.facebook.com/{{ comment.profile_uid }}/picture?type=large"/>
+                <img style="width: 90px; border: 1px solid #428bca" class="img-responsive img-rounded" src="http://graph.facebook.com/{{ comment.user_id }}/picture?type=large"/>
             </div>
             <div class="col-lg-12">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                            <strong>{{ comment.profile_name }}</strong> <span class="text-muted"></span>
+                            <strong>{{ comment.name }}</strong> <span class="text-muted"></span>
                             </div>
                             <div class="panel-body">
-                                {{ comment.text }}
+                                {{ comment.comment }}
                             </div>
                         </div>
                     </div>
