--- a/project2/app/templates/app/layout.html
+++ b/project2/app/templates/app/layout.html
@@ -60,9 +60,14 @@
     </footer>
 </div>
 
+<script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
+
+<script type="text/javascript">
+    // using jQuery
+    var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
+</script>
 
 <script src="{% static 'app/scripts/comments.js' %}"></script>
-<script src="{% static 'app/scripts/popper.min.js' %}"></script>
 {% block scripts %}{% endblock %}
 </body>
 </html>
