--- a/project2/app/templates/app/music.html
+++ b/project2/app/templates/app/music.html
@@ -105,7 +105,7 @@
     {% csrf_token %}
         {% for comment in comments %}
             <div class="col-lg-1">
-                <img style="width: 90px; border: 1px solid #428bca" class="img-responsive img-rounded" src="http://graph.facebook.com/{{ comment.user_id }}/picture?type=large"/>
+                <img style="width: 90px; border: 1px solid #428bca" class="img-responsive img-rounded" src="{{ photo }}"/>
             </div>
             <div class="col-lg-12">
                 <div class="row">
