--- a/project2/app/templates/app/layout.html
+++ b/project2/app/templates/app/layout.html
@@ -14,8 +14,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'app/images/spotify.ico' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'app/content/font-awesome.css' %}"/>
-    <script src="{% static 'app/scripts/jquery-3.2.1.min.js' %}"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
 </head>
 
 
@@ -69,6 +69,8 @@
     var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
 </script>
 
+<script src="{% static 'app/scripts/respond.js' %}"></script>
+<script src="{% static 'app/scripts/bootstrap.js' %}"></script>
 <script src="{% static 'app/scripts/comments.js' %}"></script>
 <script src="{% static 'app/scripts/popper.min.js' %}"></script>
 <script src="{% static 'app/scripts/Chart.bundle.min.js' %}"></script>
