--- a/project2/app/templates/app/statistics.html
+++ b/project2/app/templates/app/statistics.html
@@ -5,9 +5,8 @@
     <div class="container body-content" style="padding-top: 40px">
         <div class="row">
             <div class="col-lg-12">
-                <h2>Platform Data</h2>
                 <div class="card"style="padding: 30px">
-
+                    <h2 class="card-title">Platform Data</h2>
                     <div id="canvas-holder">
                         <canvas id="chart-area" />
                     </div>
@@ -54,9 +53,9 @@
                     }
                 };
             </script>
-            <div class="col-lg-12" style="padding-top: 20px">
-                <h2>Top10 Artists By Followers</h2>
-                <div class="card">
+            <div class="col-lg-12">
+                <div class="card" style="padding: 30px">
+                    <h2 class="card-title">Artists Followers</h2>
                     <div class="container">
                         <table class="table">
                             <tbody>
