--- a/project2/app/templates/app/music.html
+++ b/project2/app/templates/app/music.html
@@ -117,6 +117,12 @@
                             <div class="panel-body">
                                 {{ comment.comment }}
                             </div>
+                            <div class="panel-body">
+                                <form method="post" >
+                                {% csrf_token %}
+                                    <button style="text-align: right" class="btn btn-danger" id="delete">Delete</button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-12" style="margin-top: 10px;">
