--- a/project2/app/templates/app/layout.html
+++ b/project2/app/templates/app/layout.html
@@ -70,11 +70,11 @@
 </script>
 
 <script src="{% static 'app/scripts/respond.js' %}"></script>
-<script src="{% static 'app/scripts/bootstrap.js' %}"></script>
+<script src="{% static 'app/scripts/tether.min.js' %}"></script>
+<script src="{% static 'app/scripts/bootstrap.min.js' %}"></script>
 <script src="{% static 'app/scripts/comments.js' %}"></script>
 <script src="{% static 'app/scripts/popper.min.js' %}"></script>
 <script src="{% static 'app/scripts/Chart.bundle.min.js' %}"></script>
-<script src="{% static 'app/scripts/stats.js' %}"></script>
 {% block scripts %}{% endblock %}
 </body>
 </html>
