--- a/project2/app/templates/app/statistics.html
+++ b/project2/app/templates/app/statistics.html
@@ -5,7 +5,7 @@
     <div class="container body-content" style="padding-top: 40px">
         <div class="row">
             <div class="col-lg-12">
-                <div class="card"style="padding: 30px">
+                <div class="card" style="padding: 30px">
                     <h2 class="card-title">Platform Data</h2>
                     <div id="canvas-holder">
                         <canvas id="chart-area" />
@@ -28,10 +28,10 @@
                     data: {
                         datasets: [{
                             data: [
-                                {{platform_data.0.count}},
-                                {{platform_data.1.count}},
-                                {{platform_data.2.count}},
-                                {{platform_data.3.count}}
+                                {{ platform_data.0.count }},
+                                {{ platform_data.1.count }},
+                                {{ platform_data.2.count }},
+                                {{ platform_data.3.count }}
                             ],
                             backgroundColor: [
                                 window.chartColors.red,
@@ -54,22 +54,84 @@
                 };
             </script>
             <div class="col-lg-12">
-                <div class="card" style="padding: 30px">
-                    <h2 class="card-title">Artists Followers</h2>
-                    <div class="container">
-                        <table class="table">
-                            <tbody>
-                            {% for top in top_followers %}
-                              <tr>
-                                  <td><a style="color: black" href="/artist/id={{top.id}}/">{{top.nameartist}}</a></td>
-                                <td>{{ top.followers }}</td>
-                              </tr>
-                            {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                <div class="card"style="padding: 30px">
+                    <h2 class="card-title">Top Artists</h2>
+                    <canvas id="canvas-bar"></canvas>
                 </div>
+                <script type="application/javascript">
+
+                var followers_data_config = {
+                    labels: [
+                        {% for artist in top_followers %}
+                        "{{ artist.nameartist }}",
+                        {% endfor %}
+                    ],
+                    datasets: [{
+                        type: 'bar',
+                        label: 'Followers',
+                        yAxisID: "y-axis-1",
+                        backgroundColor: window.chartColors.red,
+                        data: [
+                            {% for artist in top_followers %}
+                            {{ artist.followers }},
+                            {% endfor %}
+                        ],
+                        borderColor: 'white',
+                        borderWidth: 2
+                    },
+                    {
+                        type: 'bar',
+                        label: 'Popularity',
+                        backgroundColor: window.chartColors.green,
+                        yAxisID: "y-axis-2",
+                        data: [
+                            {% for artist in top_followers %}
+                            {{ artist.popularity }},
+                            {% endfor %}
+                        ]
+                    }]
+                };
+            </script>
+            <script type="application/javascript">
+                window.onload = function() {
+                var ctx = document.getElementById("chart-area").getContext("2d");
+                window.myPie = new Chart(ctx, platform_data_config);
+
+                var ctx = document.getElementById("canvas-bar").getContext("2d");
+                window.myMixedChart = new Chart(ctx, {
+                    type: 'bar',
+                    data: followers_data_config,
+                    options: {
+                        responsive: true,
+                        title: {
+                            display: false
+                        },
+                        tooltips: {
+                            mode: 'index',
+                            intersect: true
+                        },
+                        scales: {
+                        yAxes: [{
+                            type: "linear", // only linear but allow scale type registration. This allows extensions to exist solely for log scale for instance
+                            display: true,
+                            position: "left",
+                            id: "y-axis-1",
+                        }, {
+                            type: "linear", // only linear but allow scale type registration. This allows extensions to exist solely for log scale for instance
+                            display: true,
+                            position: "right",
+                            id: "y-axis-2",
+                            gridLines: {
+                                drawOnChartArea: false
+                            }
+                        }],
+                    }
+                    }
+                });
+            };
+            </script>
             </div>
+
         </div>
     </div>
 {% endblock %}
