--- a/project2/app/templates/app/music.html
+++ b/project2/app/templates/app/music.html
@@ -19,11 +19,11 @@
         </h4>
 
         {% if music.popularity %}
-        <small property="spot:popularity"><strong>Popularity:</strong> {{ music.popularity}}%</small>
+        <small style="color: white" property="spot:popularity"><strong>Popularity: </strong> {{ music.popularity}}%</small>
         {% endif %}
 
         {% if music.preview_url %}
-            <h5 style="margin-top: 10px">
+            <h5 style="margin-top: 10px; color: white">
                 <i class="fa fa-pause" id="play_pause" style="cursor: pointer" aria-hidden="true"></i> <i id="play_text">Playing...</i>
             </h5>
 
